19990908-08:24 GMT+1 Antonio Linares <alinares@fivetech.com>
  * makefile.b32
    * strfmt.c and strfmt.obj were missing.

19990908-08:09 GMT+1 Antonio Linares <alinares@fivetech.com>
  * rdd.b32
    * Fixed missing '\' on the C output file path.

19990908-01:33 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/environ.c
    corrected to work with msvc.
    The format passed to sprintf is now a variable.  Under Windows,
    the hb_osletter is actually the build number, and the default
    format was not printing it correctly.

19990908-00:05 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/environ.c
    ! Version 1.43 added Windows code to detect the Windows version, but
      it also replaced the DOS code to detect Windows with Windows code
      to detect Windows. But Borland C 3.1 refuses to compile Windows code
      when creating DOS programs and I suspect that other DOS compilers do
      the same. So I restored version 1.42 and then put the Windows code
      from version 1.43 back in the only place where it belongs.
    - I removed the "95/98" designation from the Windows detection in DOS
      mode, because that code should also be able to detect Windows 3.x.
  * source/rtl/tget.prg
    ! Added missing ::Display() at end of ::Delete()

19990908-04:52 GMT+1 Victor Szel <info@szelvesz.hu>
  * tests/working/rtl_test.prg
    + Some tests now are only included when compiled with Harbour, to skip
      obvious bugs to show up in Clipper.
  * source/hbpp/table.c
    + _SET_COUNT added.
  * include/clipdefs.h
    include/error.api
    include/item.api
    include/extend.api
    ! Some fixes.

19990908-03:14 GMT+1 Victor Szel <info@szelvesz.hu>
  * tests/working/rtl_test.prg
    + Some ==/= tests added for strings.
  * source/rtl/arrays.c
    ! hb_arrayScan(). Fixed a string comparison bug.
  * source/rtl/transform.c
    + TOFIX added about a directly modified item string buffer.

19990908-02:30 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/rtl/math.c